--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Acme-ANS-D02</name>
+	<name>Acme-ANS-D03</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -34,14 +34,19 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>acme-framework-25.2.0</name>
+			<name>acme-framework</name>
 			<type>2</type>
-			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-25.2.0/target/classes</locationURI>
+			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-25.3.0/target/classes</locationURI>
+		</link>
+		<link>
+			<name>acme-framework-25.3.0</name>
+			<type>2</type>
+			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-25.3.0/target/classes</locationURI>
 		</link>
 		<link>
 			<name>target/classes</name>
 			<type>2</type>
-			<location>WORKSPACE_LOC/Projects/Acme-ANS-D02/target/classes/</location>
+			<locationURI>WORKSPACE_LOC/Projects/Acme-ANS-D02/target/classes</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
