--- a/.project
+++ b/.project
@@ -46,7 +46,7 @@
 		<link>
 			<name>target/classes</name>
 			<type>2</type>
-			<location>C:/Users/MBG/Desktop/Universidad/EntornoDP2/Workspace-25/Projects/Acme-ANS-C2/target/classes</location>
+			<location>WORKSPACE_LOC/Projects/Acme-ANS-C2/target/classes</location>
 		</link>
 	</linkedResources>
 </projectDescription>
